# openclaw-gateway

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/openclaw_gateway/: __init__.py  auth.py  config.py  protocol.py  server.py  storage.py
src/openclaw_gateway/providers/: __init__.py  asr.py  llm.py  tts.py
