[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-gateway"
version = "0.1.0"
description = "Open-source WSS gateway for connecting phones to moltbots"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ScrappyLabs", email = "hello@scrappylabs.ai" },
]
keywords = ["websocket", "gateway", "moltbot", "ai", "tts", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[project.scripts]
openclaw-gateway = "openclaw_gateway.server:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw_gateway"]
